Fix search CSS on mobile

--- a/pipeline/src/search.css
+++ b/pipeline/src/search.css
@@ -145,6 +145,10 @@
     }
 
     #search-suggestions .suggestion-header .suggestion-user::after {
-        content: "•"
+        content: " •"
+    }
+
+    #message-search .keyboard-hint {
+        display: none;
     }
 }
